# Module_Control

./: README.md
MATMODEL+PID+INS/: CONTROL.m  C_bg.m  EULER.m  EULER2QUAT.m  FLIGHTSIM.m  FX.m  GRAPHPLOT.m  INITINS.m  INITSIM.m  INS.m  INS.ris  INTSTATE.m  MODELING.m  OUT.ris  PNK.m  QUAT2EULER.m  QUAT2MATR.m
OPTIMIZATION METHOD _WITH T0/: CMakeLists.txt
OPTIMIZATION METHOD _WITH T0/OPTIMIZATION/: CONTROL.cpp  DYNAMICSYSTEM.cpp  KRITERIY.cpp  MODELING.cpp  ReadMe.txt  SPRGR.cpp  stdafx.cpp  stdafx.h
OPTIMIZATION METHOD _WITH T0/OPTIMIZATION/Debug/: mt.dep  vc90.idb
OPTIMIZATION METHOD _WITH T0/OPTIMIZATION/RESULT/: OUT.ris  RES_OPT.ris
OPTIMIZATION_METHOD _WITH_T0/: CMakeLists.txt
OPTIMIZATION_METHOD _WITH_T0/Debug/: OPTIMIZATION.ilk
OPTIMIZATION_METHOD _WITH_T0/OPTIMIZATION/: CALCULUS.cpp  CONTROL.cpp
OPTIMIZATION_METHOD _WITH_T0/OPTIMIZATION/Debug/: BuildLog.htm
OPTIMIZATION_METHOD _WITH_T0/OPTIMIZATION/RESULT/: RES_OPT.ris
SIMULATION/: .\\TLM\\OUT.ris  MODELING.m
Untitled Folder/: C_bg.m  FCT.m  INTSTATE.m
test/: CONTROL.m  FX.m  MODELING.m  OUT.ris  hello  hello.cpp
МАТ МОДЕЛЬ КВАДРОКОПТЕРА/: C_bg.m  FCT.m  FLIGHTSIM.m  FX_old.m  INS.m  INTSTATE.m  MODELING.m
МАТ МОДЕЛЬ КВАДРОКОПТЕРА_1 (in C++)/: fx.cpp  main.cpp  modeling.cpp  rks.cpp  stdafx.h
МАТ МОДЕЛЬ КВАДРОКОПТЕРА_2 (in Matlab)/: CONTROL.m  FLIGHTSIM.m  FX.m  GRAPHPLOT.m  INITSIM.m  INTSTATE.m  MODELING.m  OUT.ris  RK4.m
МАТ МОДЕЛЬ КВАДРОКОПТЕРА_3 (in Matlab)/: CONTROL.m  FLIGHTSIM.m  GRAPHPLOT.m  INITSIM.m  INTSTATE.m  OUT.ris
МАТ МОДЕЛЬ КВАДРОКОПТЕРА_3 (in С++)/: LABMIO.sln
(+148 files in other folders)
