cmake_minimum_required(VERSION 3.23)
project(OPTIMIZATION_METHOD__WITH_T0)

set(CMAKE_CXX_STANDARD 14)

include_directories(OPTIMIZATION)
include_directories(OPTIMIZATION/Debug)

add_executable(OPTIMIZATION_METHOD__WITH_T0
        OPTIMIZATION/CALCULUS.cpp
        OPTIMIZATION/CONTROL.cpp
        OPTIMIZATION/DYNAMICSYSTEM.cpp
        OPTIMIZATION/KRITERIY.cpp
        OPTIMIZATION/LINEAROPT.cpp
        OPTIMIZATION/MODELING.cpp
        OPTIMIZATION/OPTIMIZATION.cpp
        OPTIMIZATION/SPRGR.cpp
        OPTIMIZATION/stdafx.cpp
        OPTIMIZATION/stdafx.h
        OPTIMIZATION/targetver.h)
